syntax = "proto3";
package botany.auction;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/lcnem/eurx/x/auction/types";

message BaseAuction {
  uint64 id = 1 [(gogoproto.moretags) = "yaml:\"id\""];
  string initiator = 2 [(gogoproto.moretags) = "yaml:\"initiator\""];
  cosmos.base.v1beta1.Coin lot = 3 [
    (gogoproto.moretags) = "yaml:\"lot\"",
    (gogoproto.nullable) = false
  ];
  string bidder = 4 [
    (gogoproto.moretags) = "yaml:\"bidder\"",
    (gogoproto.customtype) = "github.com/lcnem/eurx/types.StringAccAddress",
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.Coin bid = 5 [
    (gogoproto.moretags) = "yaml:\"bid\"",
    (gogoproto.nullable) = false
  ];
  bool has_received_bids = 6 [(gogoproto.moretags) = "yaml:\"has_reeceived_bids\""];
  google.protobuf.Timestamp end_time = 7 [
    (gogoproto.moretags) = "yaml:\"end_time\"",
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp max_end_time = 8 [
    (gogoproto.moretags) = "yaml:\"max_end_time\"",
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

message SurplusAuction {
  BaseAuction base_auction = 1 [
    (gogoproto.moretags) = "yaml:\"base_auction\"",
    (gogoproto.embed) = true,
    (gogoproto.nullable) = false
  ];
}

message DebtAuction {
  BaseAuction base_auction = 1 [
    (gogoproto.moretags) = "yaml:\"base_auction\"",
    (gogoproto.embed) = true,
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.Coin corresponding_debt = 2 [
    (gogoproto.moretags) = "yaml:\"corresponding_debt\"",
    (gogoproto.nullable) = false
  ];
}

message CollateralAuction {
  BaseAuction base_auction = 1 [
    (gogoproto.moretags) = "yaml:\"base_auction\"",
    (gogoproto.embed) = true,
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.Coin corresponding_debt = 2 [
    (gogoproto.moretags) = "yaml:\"corresponding_debt\"",
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.Coin max_bid = 3 [
    (gogoproto.moretags) = "yaml:\"max_bid\"",
    (gogoproto.nullable) = false
  ];
  WeightedAddresses lot_returns = 4 [
    (gogoproto.moretags) = "yaml:\"lot_returns\"",
    (gogoproto.nullable) = false
  ];
}

message WeightedAddresses {
  repeated string addresses = 1 [
    (gogoproto.moretags) = "yaml:\"addresses\"",
    (gogoproto.customtype) = "github.com/lcnem/eurx/types.StringAccAddress",
    (gogoproto.nullable) = false
  ];
  repeated string weights = 2 [
    (gogoproto.moretags) = "yaml:\"weights\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message MsgPlaceBid {
  uint64 auction_id = 1 [(gogoproto.moretags) = "yaml:\"auction_id\""];
  string bidder = 2 [
    (gogoproto.moretags) = "yaml:\"bidder\"",
    (gogoproto.customtype) = "github.com/lcnem/eurx/types.StringAccAddress",
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.nullable) = false
  ];
}

message Params {
  google.protobuf.Duration max_auction_duration = 1 [
    (gogoproto.moretags) = "yaml:\"max_auction_duration\"",
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true
  ];
  google.protobuf.Duration bid_duration = 2 [
    (gogoproto.moretags) = "yaml:\"bid_duration\"",
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true
  ];
  string increment_surplus = 3 [
    (gogoproto.moretags) = "yaml:\"increment_surplus\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string increment_debt = 4 [
    (gogoproto.moretags) = "yaml:\"increment_debt\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string increment_collateral = 5 [
    (gogoproto.moretags) = "yaml:\"increment_collateral\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
